--- a/index.css
+++ b/index.css
@@ -36,11 +36,30 @@ button:hover {
 .container {
     display: flex;
     flex-direction: column;
-  
     max-width: 320px;
     margin: 30px auto;
 }
 img {
     width: 150px;
     margin: 0 auto;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    gap: 10px;
+    
+}
+
+ul li {
+    padding: 15px;
+    border-radius: 8px;
+    font-size: 20px;
+    flex-grow: 1;
+    text-align: center;
+    background-color: #FFFDF8;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    
 }
