--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
+    color: #432000;
 }
 
 input {
@@ -30,7 +31,7 @@ button {
 }
 
 button:hover {
-    background-color: #954251;
+    background-color: #432000;
 }
 
 .container {
@@ -62,4 +63,8 @@ ul li {
     background-color: #FFFDF8;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
     
+}
+
+li:hover {
+    background-color: #FFECC7;
 }
