Adding icons to app

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html, body {
     font-family: 'Rubik', sans-serif;
     background-color: #EEF0F4;
     color: #432000;
+    user-select: none;
 }
 
 input {
@@ -22,7 +23,6 @@ button {
     color: #FDFDFD;
     background-color: #AC485A;
     border: 0;
-    cursor: pointer;
     padding: 15px;
     border-radius: 8px;
     font-size: 20px;
@@ -32,6 +32,7 @@ button {
 
 button:hover {
     background-color: #432000;
+    cursor: pointer;
 }
 
 .container {
@@ -67,4 +68,5 @@ ul li {
 
 li:hover {
     background-color: #FFECC7;
+    cursor: pointer;
 }
