--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 input {
-    color: #432000;
+    color: #412205;
     background-color: #DCE1EB;
     border: 0;
     padding: 15px;
@@ -21,7 +21,7 @@ input {
 
 button {
     color: #FDFDFD;
-    background-color: #AC485A;
+    background-color: #a55cba;
     border: 0;
     padding: 15px;
     border-radius: 8px;
@@ -31,7 +31,7 @@ button {
 }
 
 button:hover {
-    background-color: #432000;
+    background-color: #510b64;
     cursor: pointer;
 }
 
@@ -67,6 +67,6 @@ ul li {
 }
 
 li:hover {
-    background-color: #FFECC7;
+    background-color: #e1d2e5;
     cursor: pointer;
 }
